--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Dec 21 22:10:05 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/cxxbinding.cc: Removed iterator usage (no more iterators in
+	Bse::Sequence).
+
 Sat Dec 20 21:24:55 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/testplugin.idl tests/testplugin.cc: Provide a plugin for
