--- a/TODO
+++ b/TODO
@@ -332,6 +332,17 @@ sfidl:
     - later: introduce iterators into sequences
     - port arts driver from csl to port-audio
     - write port-audio driver for beast
+    - optional conversion routines C++ -> C (and back)
+    - introducting CodeGeneratorCxxBase
+    - createTypeCode refactoring
+      typeArg
+      typeField
+      typeReturn
+      typeArray
+      funcFromValue, funcToValue,
+      funcCopy, funcFree, funcNew,
+
+      codeVCallArgs,
 
 bseprocidl:
   - doesn't really work when it comes to implementing _some_ objects yourself
